--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
-    "@tokens-studio/sd-transforms": "^0.10.3",
+    "@tokens-studio/sd-transforms": "^2.0.1",
     "@types/lodash-es": "^4.17.7",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
@@ -108,6 +108,7 @@
     "prop-types": "^15.8.1",
     "storybook": "^9.0.18",
     "storybook-addon-pseudo-states": "^9.0.18",
+    "style-dictionary": "^5.0.1",
     "styled-components": "^6.1.11",
     "stylis": "^4.3.0",
     "ts-node": "^10.9.1",
@@ -122,5 +123,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": ">= 5"
-  }
+  },
+  "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
 }
